[tool.poetry]
name = "ai-receptionist"
version = "0.1.0"
description = "An AI-powered receptionist with voice and scheduling capabilities"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
langchain = "^0.1.0"
openai = "^1.10.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.7"
google-api-python-client = "^2.115.0"
google-auth-oauthlib = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"